--- a/src/App.css
+++ b/src/App.css
@@ -153,6 +153,7 @@ body {
 
 .card:hover {
   transform: scale(1.05);
+  cursor: pointer;
 }
 
 .card-image {
@@ -160,6 +161,7 @@ body {
   background: #ccc;
   border-radius: 10px;
   margin-bottom: 10px;
+  
 }
 
 .card-name {
