--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@ html,
 body,
 #root,
 .app {
-  height: 100%;
+  min-height: 100vh;
   width: 100%;
   margin: 0;
   padding: 0;
@@ -26,16 +26,12 @@ body {
   backdrop-filter: blur(10px); /* blur effect */
   -webkit-backdrop-filter: blur(10px); /* for Safari */
   color: white;
-  background: #eeaeca;
-  background: radial-gradient(
-    circle,
-    rgba(238, 174, 202, 1) 0%,
-    rgba(148, 187, 233, 1) 100%
-  );
 }
 
 .app.dark {
-  background-color: #121212;
+  /* background-color: #121212; */
+  /* background-color: rgb(31, 36, 46);; */
+  background-color: rgb(0, 0, 0);
   color: #fff;
   min-height: 100vh;
 }
@@ -47,7 +43,7 @@ body {
   .nav-buttons button {
     /* background: linear-gradient(135deg, #4caf50, #2e7d32); */
     /* background: linear-gradient(135deg, #d24646, #c92c2c); */
-    background-color: #ffffff;
+    background-color: #f8f9fa;
     color: #121212;
     border: none;
     padding: 10px 18px;
@@ -68,6 +64,7 @@ body {
   align-items: center;
   padding: 10px 20px;
   background-color: inherit;
+  position: sticky
   /* border-bottom: 2px solid gray; */
 }
 
@@ -125,12 +122,16 @@ body {
 
 .card {
   background: white;
+  margin: 17px 15px;
   border-radius: 10px;
-  width: 200px;
+  height: 250px;
+  width: 250px;
   text-align: center;
   padding: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   transition: transform 0.2s;
+  display: inline-block;
+  justify-items: space-around;
 }
 
 .app.dark .card {
@@ -143,10 +144,12 @@ body {
 }
 
 .card-image {
-  height: 120px;
+  height: 210px;
   background: #ccc;
   border-radius: 10px;
   margin-bottom: 10px;
+  object-fit: cover;
+  width: -webkit-fill-available;
 }
 
 .card-name {
