--- a/src/pages/Post.css
+++ b/src/pages/Post.css
@@ -8,20 +8,20 @@
 }
 
 .post-card {
-  background: rgba(255, 255, 255, 0.1);
+  /* background: rgba(255, 255, 255, 0.1); */
   backdrop-filter: blur(20px);
   border-radius: 15px;
   padding: 24px;
-  width: 500px;
+  width: 466px;
   max-width: 90%;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
   display: flex;
   flex-direction: column;
   gap: 16px;
-  background: rgba(255, 255, 255, 0.1);
+  /* background: rgba(255, 255, 255, 0.1); */
   backdrop-filter: blur(20px);
-  border-radius: 15px;
-  /* padding: 30px; */
+  /* border-radius: 15px; */
+  padding: 30px;
   /* width: 350px; */
   text-align: center;
   border: 1px solid rgba(255, 255, 255, 0.2);
