--- a/src/pages/Roompage.css
+++ b/src/pages/Roompage.css
@@ -1,8 +1,9 @@
+
 .room-container {
   display: flex;
   flex-direction: column;
   height: 100vh;
-  background: #fafafa;
+  background: #000000;
 }
 
 .post-area {
@@ -269,4 +270,56 @@
 .copy-btn:hover {
   background: rgba(0, 132, 255, 0.4);
   box-shadow: 0 0 10px rgba(0, 132, 255, 0.6);
+}
+
+
+.post-btn{
+  background: rgba(0, 122, 255, 0.2);
+  backdrop-filter: blur(12px);
+  border: 1px solid rgba(255, 255, 255, 0.15);
+  color: #fff;
+  font-weight: 600;
+  padding: 12px 28px;
+  border-radius: 50px;
+  cursor: pointer;
+  transition: all 0.25s ease-in-out;
+  box-shadow: 0 4px 20px rgba(0, 122, 255, 0.25);
+}
+
+.post-btn:hover {
+  transform: scale(1.08);
+  background: rgba(0, 122, 255, 0.35);
+  box-shadow: 0 6px 25px rgba(0, 122, 255, 0.45);
+}
+
+/* ////// */
+
+.bottom-bar {
+  position: fixed;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  background: rgba(255, 255, 255, 0.08);
+  backdrop-filter: blur(16px);
+  border-radius: 16px;
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  padding: 10px 20px;
+  box-shadow: 0 4px 20px rgba(0,0,0,0.4);
+}
+
+.bottom-bar button {
+  background: rgba(0, 122, 255, 0.25);
+  border: none;
+  border-radius: 12px;
+  padding: 8px 16px;
+  color: #fff;
+  font-weight: 500;
+  cursor: pointer;
+  transition: all 0.25s ease;
+}
+
+.bottom-bar button:hover {
+  background: rgba(0, 122, 255, 0.45);
 }
