Add new room button and modal styling for improved user experience

--- a/src/New.css
+++ b/src/New.css
@@ -16,13 +16,13 @@
 /* Modal box */
 .modal-content {
   background: rgba(255, 255, 255, 0.1);
-  backdrop-filter: blur(20px);
+  /* backdrop-filter: blur(20px); */
   border-radius: 15px;
-  padding: 30px;
-  width: 383px;
+  /* padding: 30px; */
+  /* width: 350px; */
   text-align: center;
-  border: 1px solid rgba(255, 255, 255, 0.2);
-  box-shadow: 0 8px 30px rgba(0, 0, 0, 0.5);
+  /* border: 1px solid rgba(255, 255, 255, 0.2); */
+  /* box-shadow: 0 8px 30px rgba(0, 0, 0, 0.5); */
 }
 
 /* Title */
@@ -106,15 +106,10 @@ button:focus {
 
 /* Base styling */
 .icon-paper-plane {
-  /* width: 16px;
+  width: 16px;
   height: 14px;
   margin-left: 5px;
   transform: translateY(-4px) rotate(-37deg);
-  position: relative; */
-  width: 16px;
-  height: 14px;
-  margin-left: 3px;
-  transform: translateY(-5px) rotate(-31deg);
   position: relative;
 }
 
@@ -154,4 +149,15 @@ button:focus {
     transform: translate(120px, -50px) rotate(-15deg) scale(0.7);
     opacity: 0;
   }
+}
+
+#newRoomModal {
+  width: 383px;
+  padding: 30px;
+    background: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(20px);
+  border-radius: 15px;
+  text-align: center;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  box-shadow: 0 8px 30px rgba(0, 0, 0, 0.5);
 }
